- Fixed bug #49125 (Error in dba_exists C code)   patch by: jdornan at stanford dot edu